@@ -1,7 +1,12 @@
+??????????  1.0-r20  Sauce Labs <help@saucelabs.com>
+
+    * Validate requested domains are acceptable.
+    * Wait a bit between SSH restarts to avoid failed port forwarding.
+
 2010-11-18  1.0-r19  Sauce Labs <help@saucelabs.com>
 
-    * Check Python version at startup
-    * More metadata and show the tunnel ID to aid in debugging
+    * Check Python version at startup.
+    * More metadata and show the tunnel ID to aid in debugging.
 
 2010-11-04  1.0-r18  Sauce Labs <help@saucelabs.com>
 
